# dt-gcnn-mlx

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.hive-mind/: hive.db  hive.db-shm  hive.db-wal
.hive-mind/sessions/: hive-mind-prompt-swarm-1754229157900-nsy7uclrn.txt  session-1754229157903-w9qznvbf5-auto-save-1754229187904.json
demo_data/: triplets.json
docs/: api_reference.md  architecture.md  training_guide.md  troubleshooting.md
dt-gcnn-mlx/: README_TRAINING.md  quick_start.py  requirements.txt  run_tests.py  simple_demo.py
dt-gcnn-mlx/configs/: default_config.yaml  small_config.yaml
dt-gcnn-mlx/examples/: __init__.py  performance_benchmark.py  simple_classification.py  triplet_learning_demo.py
dt-gcnn-mlx/scripts/: profile_model.py  test_training.py  train_example.sh
dt-gcnn-mlx/src/: __init__.py
dt-gcnn-mlx/src/data/: __init__.py  data_loader.py  sample_data.py
dt-gcnn-mlx/src/evaluation/: __init__.py  analysis.py  metrics.py  visualization.py
dt-gcnn-mlx/src/losses/: __init__.py  mining_strategies.py  test_triplet.py  triplet_loss.py
dt-gcnn-mlx/src/models/: __init__.py  dt_gcnn.py  utils.py
dt-gcnn-mlx/src/training/: __init__.py  data_loader.py  train.py  trainer.py  utils.py
dt-gcnn-mlx/tests/: README.md  __init__.py  test_data_pipeline.py  test_model.py  test_training.py  test_triplet_loss.py
experiments/microtubule_time_crystals/: README.md  microtubule_experiment_20250803_121655.json  run_experiment.py
experiments/microtubule_time_crystals/data/: microtubule_graph.py  oscillation_dynamics.py
experiments/microtubule_time_crystals/models/: microtubule_dtgcnn.py
